src/test/deca/context/invalid/renduInitial/02doubledecl.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/02doubledecl.deca:5:5: DeclVar name Invalide !
